--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<body onload="main()">
 		<div>
 			<p>This page is meant to be a cute plaything, not a comprehensive dictionary.</p>
-			<p>If you want a real dictionary, check out <a href="https://lipu-linku.github.io">lipu Linku</a> instead.</p>
+			<p>If you want a real dictionary, check out <a href="https://linku.la">lipu Linku</a> instead.</p>
 		</div>
 		<select id="language_selector" onchange="language_select_changed(this)">
 		</select>
